[package]
name = "ping-things-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = { version = "2.0.9" }
solana-rpc-client-api = { version = "2.0.9" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.12"
simplelog = "0.12.2"
solana-sdk = "2.0.9"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
chrono = "0.4"
solana-transaction-status = "2.0.9"
reqwest = "0.11.27"
csv = "1.1"
spl-governance = "4.0.0"
rand = "0.8.5"
futures = "0.3.30"
dotenv = "0.15.0"
anyhow = "1.0.89"
serde_yaml = "0.9.34+deprecated"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
log = "0.4.22"
async-trait = "0.1.83"